Fixed: Labels overflows for some languages (bug#12086).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
@@ -685,13 +685,19 @@ fieldset.TableLike.FixedLabelSmall > p.FixedValueSmall > em.Error {
 }
 
 fieldset.TableLike.Narrow > label,
-fieldset.TableLike.Narrow > .Row > label {
-    line-height: 1.3em;
-}
-
+fieldset.TableLike.Narrow > .Row > label,
 fieldset.TableLike.Narrow > .Value,
 fieldset.TableLike.Narrow > .Row > .Value {
     line-height: 1.3em;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
 }
 
 iframe.Signature {
